--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <title>spokystan 🤙🏻</title>
+    <meta property="og:image" content="https://spokystan.space/preview.png" />
+    <meta name="twitter:image" content="https://spokystan.space/preview.png" />
+    <title>spokystan</title>
   </head>
   <body>
     <div id="root"></div>
