--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
+    <meta property="og:title" content="spokystan" />
+    <meta property="og:description" content="enjoy the relief for a brief moment" />
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="https://spokystan.space/preview.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="https://spokystan.space/preview.png" />
     <title>spokystan</title>
   </head>
