add description again

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="https://spokystan.space/preview.png" />
     <title>spokystan</title>
+    <meta name="description" content="enjoy the relief for a brief moment" />
   </head>
   <body>
     <div id="root"></div>
